--- a/data/tekton-pipelines/windows-bios-installer-configmaps.yaml
+++ b/data/tekton-pipelines/windows-bios-installer-configmaps.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: windows10-bios-autounattend
+  name: windows2k19-bios-autounattend
   annotations:
     "kubevirt.io/deploy-namespace": "kubevirt-os-images"
 data:
@@ -22,7 +22,7 @@ data:
         <component name="Microsoft-Windows-PnpCustomizationsWinPE" processorArchitecture="amd64" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS">
           <DriverPaths>
             <PathAndCredentials wcm:action="add" wcm:keyValue="1">
-              <Path>E:\viostor\w10\amd64</Path>
+              <Path>E:\viostor\2k19\amd64</Path>
             </PathAndCredentials>
           </DriverPaths>
         </component>
@@ -56,8 +56,8 @@ data:
             <OSImage>
               <InstallFrom>
                 <MetaData wcm:action="add">
-                  <Key>/Image/Description</Key>
-                  <Value>Windows 10 Pro</Value>
+                  <Key>/IMAGE/NAME</Key>
+                  <Value>Windows Server 2019 SERVERSTANDARD</Value>
                 </MetaData>
               </InstallFrom>
               <InstallTo>
@@ -68,9 +68,6 @@ data:
           </ImageInstall>
           <UserData>
             <AcceptEula>true</AcceptEula>
-            <ProductKey>
-              <Key/>
-            </ProductKey>
           </UserData>
         </component>
       </settings>
